force-app/main/default/objects/Int_Agreement_Line__c/Int_Agreement_Line__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Line</description>
    <label>Int Agreement Line</label>
    <nameField>
        <displayFormat>ALI-{0000000000}</displayFormat>
        <label>Agreement Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>