force-app/main/default/objects/Int_Agreement_Line__c/fields/Agreement_Line_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Line_Maturity_Date__c</fullName>
    <description>Agreement Line Maturity Date</description>
    <label>Agreement Line Maturity Date</label>
    <type>Date</type>
</CustomField>