force-app/main/default/objects/Int_Agreement_Line__c/fields/Agreement_Line_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Line_Status_Code__c</fullName>
    <description>Agreement Line Status Code</description>
    <label>Agreement Line Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>