force-app/main/default/objects/Int_Agreement_Line__c/fields/Hard_Costs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hard_Costs_Amount__c</fullName>
    <description>Hard Costs Amount</description>
    <label>Hard Costs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>