force-app/main/default/objects/Int_Agreement_Line__c/fields/Purchase_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type_Code__c</fullName>
    <description>Purchase Type Code</description>
    <label>Purchase Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>