force-app/main/default/objects/Int_Agreement_Line__c/fields/Residual_Value_Booked__c.field-meta.xml
<CustomField>
    <fullName>Residual_Value_Booked__c</fullName>
    <description>Residual Value Booked</description>
    <label>Residual Value Booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>