force-app/main/default/objects/Int_Agreement_Line__c/fields/Soft_Costs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Soft_Costs_Amount__c</fullName>
    <description>Soft Costs Amount</description>
    <label>Soft Costs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>